Refactor api spec, add unit tests
